26Feb05=======================================================================
1. Added show/grayline command from Steve K9AN. This is also aliased to
show/greyline :-)
2. fix spot dupe ambiguity on spotter having an SSID (remove it).
25Feb05=======================================================================
1. Changed the way spot deduping is done. This is likely to make deduping much
stricter. In essence a person cannot spot the same call on the same frequency
more than once an hour (configurable) unless he makes a (non-duped) comment
as well. 
2. Added Swains Island
3. Added TO4G for Glorioso 
19Feb05=======================================================================
1. changed ssb allocation on 40m to add missing 5Khz.
2. Change sh/425 to Leo, IZ5FSA's requirements.
08Feb05=======================================================================
1. possibly fixed the multiple condition problems on sh/dx
2. added some FAQs.
05Feb05=======================================================================
1. Fix a long standing (ie since the first bulletin was sent) bug with old
mail not being deleted until a restart was done.
2. As well as a duplicate check on existing bulletins, I have added a check 
the message is not (already) too old. 
3. fix problem for perl < 5.6 in Thingy.pm 
03Feb05=======================================================================
1. Added latest Spanish translations courtesy of Angel EA7WA.
2. Force all languages to use pr in en in Messages, as the prompt is
the same for all.
19Jan05=======================================================================
1. More Spanish changes by Angel, EA7WA.
2. add language dependant motd files. You can now have motd_{lang} and 
motd_nor_{lang} (eg for Spanish: motd_es and motd_nor_es) for normal and
non-registered (if you use registration) users respectively. Based on an idea
from Angel, EA7WA.
18Jan05=======================================================================